# mullvad-exclude-suid

./: README.md  meson.build  meson.options
install_scripts/: root_on_install.py  setuid_root_on_install.py
src/: mullvad-exclude-suid.c
